add config class

--- a/MB_AutoUpdatePlaylistOrder.csproj
+++ b/MB_AutoUpdatePlaylistOrder.csproj
@@ -85,6 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs" />
     <Compile Include="ConfigForm.cs">
       <SubType>Form</SubType>
     </Compile>
