--- a/MB_AutoUpdatePlaylistOrder.csproj
+++ b/MB_AutoUpdatePlaylistOrder.csproj
@@ -89,6 +89,9 @@
     <Compile Include="ConfigForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ExcludePlaylistsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MusicBeeInterface.cs" />
     <Compile Include="OrderConfigForm.cs">
       <SubType>Form</SubType>
