--- a/MB_AutoUpdatePlaylistOrder.csproj
+++ b/MB_AutoUpdatePlaylistOrder.csproj
@@ -125,7 +125,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y "$(TargetDir)\*.*" "C:\Programs\MusicBee\Plugins\"</PostBuildEvent>
+    <PostBuildEvent>del /S /Q "mb_AutoUpdatePlaylistOrder"
+mkdir "mb_AutoUpdatePlaylistOrder"
+mkdir "mb_AutoUpdatePlaylistOrder\mb_AutoUpdatePlaylistOrder\"
+copy /Y "$(TargetPath)" "mb_AutoUpdatePlaylistOrder"
+for %25%25f in ("$(TargetDir)*.dll") do if /I not "%25%25~nxf"=="$(TargetFileName)" copy /Y "%25%25f" "mb_AutoUpdatePlaylistOrder\mb_AutoUpdatePlaylistOrder\"
+xcopy /Y "$(TargetDir)\mb_AutoUpdatePlaylistOrder" "C:\Programs\MusicBee\Plugins\" /e</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
